# tradinglab-data

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  Makefile  OPERATIONS.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
configs/: config.yaml  config.yaml.example
docs/: API_CONTRACT.md  BOUNDARY.md  CONSUMER_COMPATIBILITY_CHECKLIST.md  INTRADAY_5M_CONTRACT.md  PARQUET_SCHEMA.md  TROUBLESHOOTING.md  WORKFLOWS.md
examples/meta/: exchange_defaults.csv  symbol_master.example.csv  symbol_overrides.csv
scripts/: audit_yahoo_quote_metadata.py  bootstrap_stooq_history.py  build_index_override.py  check_crypto_status.py  check_parquet_status.py  normalize_universe_schema.py  parquet_status.py  report_parquet_store.py  report_universe_consistency.py  run_crypto_update_verify.sh  run_daily_update_verify.sh  validate_etf_master.py  verify_yahoo_access.py
src/tradinglab_data/: __init__.py  _alert_report.py  _intraday_fetch.py  _move_compute.py  _ohlc_utils.py  _yf_utils.py  cli.py  config.py  config.yaml.example  consistency_report.py  contracts.py  data_stooq.py  data_yf.py  exceptions.py  extended_hours_monitor.py  fx.py  intraday_live.py  intraday_research.py  market_data.py  market_data_workflows.py  market_timezones.py  parquet_verify.py  provider_base.py  schema.py  store_report.py  symbol_master.py  ticker_map.py  universe.py  universe_build.py  universe_listing.py  workflows.py  yahoo_quote_audit.py
src/tradinglab_data/crypto/: __init__.py  registry.py  storage.py  symbols.py  validation.py  verify.py  workflows.py
src/tradinglab_data/crypto/providers/: __init__.py  binance_ccxt.py  ccxt_exchange.py  coinbase_ccxt.py  coingecko_provider.py  kraken_ccxt.py
tests/: _load.py  conftest.py  test_audit_yahoo_quote_metadata_script.py  test_backward_compatibility_module.py  test_bootstrap_stooq_history_script.py  test_build_index_override_script.py  test_check_crypto_status_script.py  test_check_parquet_status.py  test_ci_docs_module.py  test_cli_module.py  test_config_module.py  test_consistency_report_module.py  test_crypto_cli_module.py  test_crypto_module.py  test_crypto_network_module.py  test_crypto_providers_module.py  test_data_stooq_module.py  test_data_yf_module.py  test_docs_symbol_master_fx_module.py  test_extended_hours_monitor_module.py  test_fx_module.py  test_intraday_fetch_module.py  test_intraday_live_module.py  test_intraday_research_module.py  test_market_data_module.py  test_market_data_workflows_module.py  test_move_compute_module.py  test_normalize_universe_schema_script.py  test_ohlc_utils_module.py  test_package_exports_module.py  test_parquet_status_script.py  test_parquet_verify_module.py  test_polars_first_module.py  test_schema_module.py  test_store_report_module.py  test_symbol_master_module.py  test_ticker_map_module.py  test_universe_build_module.py  test_universe_build_parsers_module.py  test_universe_listing_module.py  (+8 more)
