[project]
name = "tradinglab-data"
version = "0.1.0"
description = "Market data maintenance package for TradingLab parquet and universe artifacts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "polars>=0.20.0",
  "pyarrow>=14.0.0",
  "yfinance>=0.2.36",
  "pandas>=2.0.0",
  "pyyaml>=6.0.1",
  "tqdm>=4.66.0",
  "lxml"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0"
]

[project.scripts]
tradinglab-data = "tradinglab_data.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradinglab_data"]
