[project]
name = "tradinglab-data"
version = "0.1.0"
description = "Market data maintenance package for TradingLab parquet and universe artifacts"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Michael T. Wolfinger", email = "michael@wolfinger.eu" }
]
keywords = ["market-data", "parquet", "polars", "trading", "finance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "polars>=0.20.0",
  "pyarrow>=14.0.0",
  "yfinance>=0.2.36",
  "pandas>=2.0.0",
  "pyyaml>=6.0.1",
  "tqdm>=4.66.0",
  "lxml"
]

[project.urls]
Homepage = "https://github.com/mtw/tradinglab-data"
Repository = "https://github.com/mtw/tradinglab-data"
Issues = "https://github.com/mtw/tradinglab-data/issues"

[project.optional-dependencies]
test = [
  "pytest>=8.0.0"
]

[project.scripts]
tradinglab-data = "tradinglab_data.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradinglab_data"]
include = [
  "src/tradinglab_data/config.yaml.example",
  "src/tradinglab_data/py.typed",
]
