[project]
name = "tradinglab-data"
version = "0.4.3"
description = "Polars-first market data maintenance package for parquet and universe artifacts"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Michael T. Wolfinger", email = "michael@wolfinger.eu" }
]
license = { text = "MIT" }
license-files = []
keywords = ["market-data", "parquet", "polars", "polars-first", "trading", "finance"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "ccxt>=4.4.0",
  "polars>=1.0.0",
  "pyarrow>=16.0.0",
  "yfinance>=0.2.36",
  "pandas>=2.2.0",
  "pyyaml>=6.0.1",
  "tqdm>=4.66.0",
  "lxml>=4.9.0"
]

[project.urls]
Homepage = "https://github.com/mtw/tradinglab-data"
Repository = "https://github.com/mtw/tradinglab-data"
Issues = "https://github.com/mtw/tradinglab-data/issues"

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]
dev = [
  "build>=1.2.0",
  "mypy>=1.20.0",
  "ruff>=0.15.0",
  "twine>=5.0.0",
  "types-pyyaml>=6.0.0",
]

[project.scripts]
tradinglab-data = "tradinglab_data.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
features = ["test", "dev"]

[tool.hatch.envs.default.scripts]
test = "pytest -q tests --cov-fail-under=85"
lint = "ruff check src tests scripts"
typecheck = "mypy src"
build-check = "python -m build && python -m twine check dist/*"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.venv*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tradinglab_data"]
include = [
  "src/tradinglab_data/LICENSE",
  "src/tradinglab_data/config.yaml.example",
  "src/tradinglab_data/py.typed",
]

[tool.pytest.ini_options]
addopts = "-m 'not network' --cov=src/tradinglab_data --cov-report=term-missing"
filterwarnings = [
  "error",
]
markers = [
  "network: tests that require live network access",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tradinglab_data.config"]
disable_error_code = ["import-untyped"]
